made some changes in the batchconfig and the batchscheduler